--- a/posts/sw/intro.mdx
+++ b/posts/sw/intro.mdx
@@ -2,6 +2,7 @@
 title: Introduction
 slug: /sw
 section: Introduction
+description: "Explore the realms of Service Workers with Remix utilizing Remix PWA's very own extensible module!"
 position: 1
 ---
 
