--- a/posts/sw/intro.mdx
+++ b/posts/sw/intro.mdx
@@ -19,7 +19,7 @@ import Info from "./info.tsx";
 <Grid>
   <Link
     icon={<Arrow />}
-    to={"/sw/installation"}
+    to={"/sw#installation"}
     title={"Installation"}
     desc={"Set up Remix PWA in your application easily!"}
   />
