--- a/posts/sw/plugins.mdx
+++ b/posts/sw/plugins.mdx
@@ -21,14 +21,8 @@ These are a list of plugins that are available for `@remix-pwa/sw` developed by 
 
 ...
 
-## @remix-pwa/sw + Workbox plugins 
+## Workbox Plugins
 
 Plugins used to extend the functionality of `@remix-pwa/sw` with [Workbox](https://developers.google.com/web/tools/workbox) developed by both the Remix PWA team and the community
-
-### Official Plugins
-
-...
-
-### Community Plugins
 
 ...
