--- a/posts/sw/plugins.mdx
+++ b/posts/sw/plugins.mdx
@@ -25,4 +25,8 @@ These are a list of plugins that are available for `@remix-pwa/sw` developed by 
 
 Plugins used to extend the functionality of `@remix-pwa/sw` with [Workbox](https://developers.google.com/web/tools/workbox) developed by both the Remix PWA team and the community
 
-...
+- [Background Sync Plugin](https://developer.chrome.com/docs/workbox/reference/workbox-background-sync/#type-BackgroundSyncPlugin)
+- [Broadcast Update Plugin](https://developer.chrome.com/docs/workbox/reference/workbox-broadcast-update/#type-BroadcastUpdatePlugin)
+- [Cacheable Response Plugin](https://developer.chrome.com/docs/workbox/reference/workbox-cacheable-response/#type-CacheableResponsePlugin)
+- [Expiration Plugin](https://developer.chrome.com/docs/workbox/reference/workbox-expiration/#type-ExpirationPlugin)
+- [Range Request Plugin](https://developer.chrome.com/docs/workbox/reference/workbox-range-requests/#type-RangeRequestsPlugin)
