--- a/posts/sw/cache-strategy.mdx
+++ b/posts/sw/cache-strategy.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Cache Strategy"
-description: Learn how to install and setup a basic Service Worker in Remix
+description: Under-the-hood view of what makes up caching in Remix PWA
 slug: /sw/cache-strategy
 section: "API Reference"
 position: 1
