--- a/posts/sw/extending.mdx
+++ b/posts/sw/extending.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Extending your SW"
-description: Learn how to install and setup a basic Service Worker in Remix
+description: Learn how to extend the capabilities of your Service Worker and Remix PWA with this guide.
 slug: /sw/extending
 section: Guides
 position: 2
