--- a/posts/sw/helper-reference.mdx
+++ b/posts/sw/helper-reference.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Helper Reference" 
-description: Learn how to install and setup a basic Service Worker in Remix
+description: ""
 slug: /sw/helper-reference
 section: "API Reference"
 position: 4
