--- a/posts/sw/message-handler.mdx
+++ b/posts/sw/message-handler.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Message Handler"
-description: Learn how to install and setup a basic Service Worker in Remix
+description: Explore how Remix PWA handles communication between the Service Worker and your application.
 slug: /sw/message-handler
 section: "API Reference"
 position: 2
