--- a/posts/sw/plugin-reference.mdx
+++ b/posts/sw/plugin-reference.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Plugin Reference"
-description: Learn how to install and setup a basic Service Worker in Remix
+description: ""
 slug: /sw/plugin-reference
 section: "API Reference"
 position: 3
