--- a/posts/client/intro.mdx
+++ b/posts/client/intro.mdx
@@ -1,7 +1,7 @@
 ---
 title: Introduction
 description: Possimus saepe veritatis sint nobis et quam eos. Architecto consequatur odit perferendis fuga eveniet possimus rerum cumque. Ea deleniti voluptatum deserunt voluptatibus ut non iste.
-slug: /client/introduction
+slug: /client
 section: Introduction
 position: 1
 ---
