--- a/posts/pwa/remix-pwa-push.mdx
+++ b/posts/pwa/remix-pwa-push.mdx
@@ -6,4 +6,24 @@ section: Packages
 position: 2
 ---
 
-<p className="lead">Coming Soon 🚜</p>
+## `@remix-pwa/push`
+
+Push notifications for your PWA are now here and they are super easy to use!
+`@remix-pwa/push` is a new package under the Remix PWA organisation that allows you to 
+easily add push notifications to your Remix PWA as well as extend the functionality to 
+your hearts desire. 
+
+### Installation
+
+```bash
+npm install @remix-pwa/push
+
+# If you don't have @remix-pwa/sw, install it 
+npm install @remix-pwa/sw
+```
+
+### Usage
+
+Check out the [guide](/push/get-started) to get started with `@remix-pwa/push`!
+
+> Still WIP, more docs coming soon!
