--- a/posts/sw/use-sw-effect.mdx
+++ b/posts/sw/use-sw-effect.mdx
@@ -12,6 +12,7 @@ It is similar to the `useEffect` hook, but it is only called when the user navig
 This hook is to be used exclusively in your `root` file. 
 
 ```ts 
+// app/root.tsx
 import { useSWEffect } from "@remix-pwa/sw";
 
 // at the yop of your root component 
