Correct typo on useSWEffect

--- a/posts/pwa/quickstart.mdx
+++ b/posts/pwa/quickstart.mdx
@@ -40,7 +40,7 @@ Add this line to your `root.tsx` (remember to import from `@remix-pwa/sw`):
 
 ```ts 
 // Add at the top of your main, root component
-useSWEEffect();
+useSWEffect();
 ```
 
 And like that, we have a PWA. 
