fix: typo in usage link

--- a/posts/pwa/remix-pwa-sw.mdx
+++ b/posts/pwa/remix-pwa-sw.mdx
@@ -21,7 +21,7 @@ Check out the [installation guide](/sw/installation) for more information.
 
 ## Usage
 
-Check out the [usage guide](/sw/basix-setup) for more information.
+Check out the [usage guide](/sw/basic-setup) for more information.
 
 ## API
 
