chore: new posts update + new schema

--- a/posts/faq.mdx
+++ b/posts/faq.mdx
@@ -1,7 +1,7 @@
 ---
 title: FAQ
 description: Possimus saepe veritatis sint nobis et quam eos. Kudos!
-shortTitle: FAQ
+shortTitle: 'FAQ'
 section: 'Getting Started'
 position: 2
 ---
@@ -18,6 +18,8 @@ import { TipGood, TipBad } from './tip.tsx'
 Tryst!
 
 ## GFM
+
+`backticks()`
 
 ## <Heading ignore>testing</Heading>
 
