--- a/posts/installation.mdx
+++ b/posts/installation.mdx
@@ -1,7 +1,7 @@
 ---
 title: Installation
 description: Possimus saepe veritatis sint nobis et quam eos.
-shortTitle: Installation
+shortTitle: 'Installation'
 section: 'Getting Started'
 position: 1
 ---
