new posts & stuffs

--- a/posts/faq.mdx
+++ b/posts/faq.mdx
@@ -1,9 +1,9 @@
 ---
 title: FAQ
-description: Possimus saepe veritatis sint nobis et quam eos. Kudos!
+description: Frequently asked questions about Remix PWA.
 shortTitle: 'FAQ'
 section: 'Getting Started'
-position: 2
+position: 5
 ---
 
 import Warn from './warn.tsx'
