--- a/posts/installation.mdx
+++ b/posts/installation.mdx
@@ -1,6 +1,6 @@
 ---
 title: Installation
-description: Possimus saepe veritatis sint nobis et quam eos.
+description: How to install and setup Remix PWA.
 shortTitle: 'Installation'
 section: 'Getting Started'
 position: 1
