--- a/posts/contribute.mdx
+++ b/posts/contribute.mdx
@@ -7,5 +7,16 @@ position: 3
 ---
 
 
-{/* Do not remove this line! */}
+{/* Do not remove these lines! */}
 import Heading from './heading.tsx'
+import Editor from './editor.tsx'
+
+## Contributing
+
+### Contributing to Remix PWA
+
+We welcome contributions to Remix PWA! We can't be where we are or accomplish what we do without the wonderful community. We appreciate your help!
+
+Check out the [Contributing Guide]() in the meantime.
+
+**Note:** This project is bound by a [Code of Conduct](https://github.com/remix-pwa/monorepo/blob/dev/CODE_OF_CONDUCT.md). Please review and abide by it.
