--- a/posts/faq.mdx
+++ b/posts/faq.mdx
@@ -10,80 +10,13 @@ import Warn from './warn.tsx'
 import Heading from './heading.tsx'
 import Details from './details.tsx'
 import Editor from './editor.tsx'
-
-import { TipGood, TipBad } from './tip.tsx'
+import Info from './info.tsx'
 
 ## FAQ 
 
-Tryst!
+### <Heading ignore>Question 1:...</Heading>
 
-## GFM
-
-`backticks()`
-
-## <Heading ignore>testing</Heading>
-
-## Tsk 
-
-testing
-  
-## Autolink literals
-  :+1:
-
-  ### <Heading>testing 3</Heading>
-
-  <TipGood>Try to wash your feet</TipGood>
-
-  ```js
-  function fancyAlert(arg) {
-    if (arg) {
-      $.facebox({ div: '#foo' })
-    }
-  }
-  ```
-
-  ### Warning
-
-  ### Another h3
-
-  <Warn>Hello from MDX!</Warn>
-  🎈
-  
-  www.example.com, https://example.com, and contact@example.com.
-  
-  ## Footnote
-  ### Ahhh!
-  
-  A note[^1]
-  
-  [^1]: Big note.
-  
-  ## Strikethrough
-  
-  ~one~ or ~~two~~ tildes.
-
-  <Details title={"Guess what is hiding in here?"}>
-    Nothing ofc! Just pure old, boring text.
-  </Details>
-  
-  ## Table
-  
-  | Item         | Price | # In stock |
-  |--------------|:-----:|-----------:|
-  | Juicy Apples |  1.99 |        739 |
-  | Bananas      |  1.89 |          6 |
-  
-  ## Tasklist
-  
-  * [ ] to do
-  * [x] done
-
-Hello, World!
-
-```js {{ filename: 'tailwind.config.js' }}
-  function fancyAlert(arg) {
-    if (arg) {
-      $.facebox({ div: '#foo' })
-    }
-  }
-```
+<Info>
+This page is blank. As time passes on, content would come, in the meantime, keep your questions coming.
+This is a new approach and architecture for Remix PWA, so we expect a lot of questions. We will be updating this page with answers to the most common questions.
+</Info>
