--- a/posts/packages.mdx
+++ b/posts/packages.mdx
@@ -27,11 +27,11 @@ and handlers for the default runtime.
 ## `@remix-pwa/cache`
 
 This is a very thin wrapper around the browser's `CacheStorage` & `Cache` API. It is used like the normal cache but it also adds a few extra features like
-the ability to cache a response for a specific time.
+the ability to cache a response for a specific time (cache expiration) and LRU behaviour.
 
 ## `@remix-pwa/sw`
 
-The main factory house for Remix PWA. Ships with a lot less than v2 but still as important. Contains typings for the worker and utilities like hooks and
+The main factory house for Remix PWA. Ships with a lot less than v2 but still as important. Contains typings for the worker as well as utilities like hooks and
 `LiveReload`, worker messaging handler and more.
 
 ## `@remix-pwa/strategy`
