Syncing with S3 bucket + vercel trial

--- a/posts/faq.mdx
+++ b/posts/faq.mdx
@@ -14,7 +14,7 @@ import Info from './info.tsx'
 
 ## FAQ 
 
-### <Heading ignore>Question 1:...</Heading>
+### Question 1:...
 
 <Info>
 This page is blank. As time passes on, content would come, in the meantime, keep your questions coming.
