--- a/posts/get-load-context.mdx
+++ b/posts/get-load-context.mdx
@@ -143,7 +143,7 @@ This is a good illustration (in my opinion) of how you can use the `context` obj
 
 ## API
 
-### <Heading ignore>API Reference</Heading>
+### API Reference
 
 By default, the `context` object ships with some utilities that you can use in your worker thread.
 
