--- a/posts/default-fetch-handler.mdx
+++ b/posts/default-fetch-handler.mdx
@@ -6,11 +6,11 @@ section: "Routes & Worker API"
 position: 1
 ---
 
-{/* Do not remove these lines! */}
 import Heading from './heading.tsx'
 import Editor from './editor.tsx'
 import Info from './info.tsx'
 import Warn from './warn.tsx'
+import Snippet from './snippet.tsx'
 
 In a default (, de-facto) Remix application, whenever you make a request to a URL or route, the browser will make a request to the server and return the response.
 That is simple a `fetch(request)` call. Service Workers are a middle layer between the browser and the server, so they intercept requests being made by the browser
@@ -145,7 +145,7 @@ Remix PWA models its Route APIs after Remix's own. So `context`, `params` and `r
 them in `action`s or `loader`s.
 </Info>
 
-## <Heading ignore>TypeScript Support</Heading>
+## TypeScript Support
 
 ### Type Safety
 
