chore: text update

--- a/posts/get-load-context.mdx
+++ b/posts/get-load-context.mdx
@@ -11,7 +11,7 @@ import Heading from './heading.tsx'
 import Editor from './editor.tsx'
 import Snippet from './snippet.tsx'
 
-## `getLoadContext`
+## getLoadContext
 
 ### Basic Usage
 
