--- a/posts/worker-action.mdx
+++ b/posts/worker-action.mdx
@@ -21,7 +21,7 @@ Cool, the keyword there is **server-only**. `workerAction` is exactly the same (
 
 ---
 
-## `workerAction`
+## workerAction
 
 ### The Basics
 
