chore: grammar formatting + typo fixes

--- a/posts/installation.mdx
+++ b/posts/installation.mdx
@@ -35,7 +35,7 @@ Possible options are:
 - <b>Remix app location</b>: Where your `app` directory is located. This is the directory where your Remix application is located.
 - <b>Install Dependencies</b>: Wether you want to install the dependencies or not.
 
-To explore the CLI the detail, check out [this guide]().
+To explore the CLI the detail, check out [this guide](/docs/remix-pwa-dev-cli).
 
 ## Set Up your Remix Config
 
@@ -48,6 +48,8 @@ module.exports = {
   // ...
 }
 ```
+
+Check out the [config](/docs/remix-config-js) section for a full rundown.
 
 <Info>
 Remix PWA compiler utilises the Remix configuration file under the hood. This allows you to change settings such as your worker runtime,
